--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-aad-msal": "^1.1.2",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-responsive": "^8.0.1",
@@ -20,7 +21,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
