--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.24.2",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-aad-msal": "^1.1.2",
