--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
-REACT_APP_API_URL= http://167.71.200.162/
-clientIdAADMS=b0306e8c-c76e-4e1e-a8c3-41ae52c5097e
-authorityAADMS=https://login.microsoftonline.com/58f5a80f-a60e-4de7-9114-470285231e08
+REACT_APP_API_URL= http://34.73.95.163:8010
+REACT_APP_CLIENTID_AADMS=d03725de-9c3a-4f0c-ae12-ce6636d5a76b
+REACT_APP_AUTHORITY_AADMS=https://login.microsoftonline.com/3632774d-2018-4285-a91b-82e16d8f3a0b
+REACT_APP_REDIRECT_URI_AADMS=http://localhost:8080/home
