--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 REACT_APP_API_URL= http://34.73.95.163:8010
 REACT_APP_CLIENTID_AADMS=d03725de-9c3a-4f0c-ae12-ce6636d5a76b
 REACT_APP_AUTHORITY_AADMS=https://login.microsoftonline.com/3632774d-2018-4285-a91b-82e16d8f3a0b
-REACT_APP_REDIRECT_URI_AADMS=http://localhost:8080/home
+REACT_APP_REDIRECT_URI_AADMS=http://34.73.95.163:8010/home
