--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-REACT_APP_API_URL= https://10.23.52.86:8080
+REACT_APP_API_URL= https://172.30.252.55:8080/api
 REACT_APP_CLIENTID_AADMS=d03725de-9c3a-4f0c-ae12-ce6636d5a76b
 REACT_APP_AUTHORITY_AADMS=https://login.microsoftonline.com/3632774d-2018-4285-a91b-82e16d8f3a0b
-REACT_APP_REDIRECT_URI_AADMS=https://10.23.52.86:8080/home
+REACT_APP_REDIRECT_URI_AADMS=https://172.30.252.55:8080/home
