--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,33 @@
 server {
-  listen 80;
+  
+  listen 443 ssl;
+  listen [::]:443 ssl;
+
   root /usr/share/nginx/html;
   index index.html;
 
+  ssl_certificate  /etc/nginx/nginx-selfsigned.crt;
+  ssl_certificate_key  /etc/nginx/nginx-selfsigned.key;
+  ssl_session_cache  builtin:1000  shared:SSL:10m;
+  ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers  HIGH:!aNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+  ssl_prefer_server_ciphers  on;
+
   access_log /var/log/nginx/myprofile.com.access.log;
   error_log /var/log/nginx/myprofile.com.error.log;
+  
+  location /api {
+       
+    proxy_set_header  Host $host;
+    proxy_set_header  X-Real-IP $remote_addr;
+    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header  X-Forwarded-Proto $scheme;
+    proxy_pass http://10.23.52.86:8080/;
+    proxy_read_timeout  90;
+  }
+
   location / {
+
     try_files $uri /index.html =404;
   }
 }
