--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,6 +12,10 @@ server {
   ssl_ciphers  HIGH:!aNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
   ssl_prefer_server_ciphers  on;
 
+  add_header X-Frame-Options "SAMEORIGIN";
+  client_header_buffer_size 64k;
+  large_client_header_buffers 4 64k;
+
   access_log /var/log/nginx/myprofile.com.access.log;
   error_log /var/log/nginx/myprofile.com.error.log;
   location /api {
