--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "dev": "PORT=8080 react-scripts start",
+    "dev": "PORT=8080 react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
