--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "dev": "PORT=8080 react-scripts start",
