--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -24,12 +24,16 @@ server {
     proxy_set_header  X-Real-IP $remote_addr;
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Proto $scheme;
-    proxy_pass http://10.23.52.86:8080/;
+    proxy_pass http://10.23.55.98:8080/;
     proxy_read_timeout  90;
   }
 
   location / {
 
     try_files $uri /index.html =404;
+	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+	add_header Cache-Control "no-cache, must-revalidate" always;
+	add_header X-XSS-Protection "1; mode=block" always;
+	add_header X-Content-Type-Options "nosniff" always;
   }
 }
