--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "uuid": "^3.4.0"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
