--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^16.11.0",
     "react-aad-msal": "^1.1.2",
     "react-dom": "^16.11.0",
-    "react-idle-timer": "^4.2.12",
     "react-redux": "^7.1.1",
     "react-responsive": "^8.0.1",
     "react-router": "^5.1.2",
@@ -25,7 +24,7 @@
     "uuid": "^3.4.0"
   },
   "scripts": {
-    "dev": "PORT=8080 react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
