--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.11.0",
     "react-aad-msal": "^1.1.2",
     "react-dom": "^16.11.0",
+    "react-idle-timer": "^4.2.12",
     "react-redux": "^7.1.1",
     "react-responsive": "^8.0.1",
     "react-router": "^5.1.2",
