fix env template

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 REACT_APP_API_URL=https://performance.xl.co.id/api
 REACT_APP_CLIENTID_AADMS=2ad95578-4203-4ca2-821a-acce0c89ea64
 REACT_APP_AUTHORITY_AADMS=https://login.microsoftonline.com/a1eae0da-f0d1-449d-8854-f54ddbda8711
-REACT_APP_REDIRECT_URI_AADMS=https://performance.xl.co.id/home
+REACT_APP_REDIRECT_URI_AADMS=https://performance.xl.co.id
