--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "antd": "^3.24.2",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "highcharts": "^8.1.2",
+    "highcharts-react-official": "^3.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
