--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.24.2",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
     "lodash": "^4.17.15",
@@ -30,7 +31,11 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev:staging": "env-cmd -f .env.staging npm run dev",
+    "dev:prod": "env-cmd -f .env.prod npm run dev",
+    "build:staging": "env-cmd -f .env.staging npm run build",
+    "build:prod": "env-cmd -f .env.prod npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
