--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev:staging": "env-cmd -f .env.staging npm run dev",
-    "dev:prod": "env-cmd -f .env.prod npm run dev",
+    "dev:staging": "env-cmd -f .env.local.staging npm run dev",
+    "dev:prod": "env-cmd -f .env.local.sprod npm run dev",
     "build:staging": "env-cmd -f .env.staging npm run build",
     "build:prod": "env-cmd -f .env.prod npm run build"
   },
