--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: "3"
 
 services:
   pmgm_frontend:
     container_name: PMGM_FRONTEND
     build: .
     ports:
-      - '8080:80'
+      - "8080:80"
