--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "axiata-portal",
-  "version": "0.1.0",
+  "name": "pmgm-frontend-web",
+  "version": "1.2.1",
   "private": true,
   "dependencies": {
     "antd": "^3.24.2",
     "axios": "^0.19.0",
-    "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
     "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
@@ -24,7 +23,6 @@
     "react-scripts": "^3.2.0",
     "react-toastify": "^6.0.9",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.4.0"
   },
