--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-aad-msal": "^1.1.3",
+    "react-cookie": "^4.1.1",
     "react-dom": "^16.11.0",
     "react-idle-timer": "^4.2.12",
     "react-redux": "^7.1.1",
