Update package.json = Add Sonar

--- a/package.json
+++ b/package.json
@@ -30,13 +30,26 @@
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --coverage",
     "eject": "react-scripts eject",
     "dev:staging": "env-cmd -f .env.local.staging npm run dev",
     "dev:prod": "env-cmd -f .env.local.prod npm run dev",
     "build:staging": "env-cmd -f .env.staging npm run build",
+    "sonar":  "node sonar-project.js",
     "build:prod": "env-cmd -f .env.prod npm run build"
   },
+    "jest": {
+        "testEnvironment":  "node",
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ],
+        "testResultsProcessor":  "jest-sonar-reporter"
+    },
+    "jestSonar": {
+        "reportPath":  "coverage",
+        "reportFile":  "test-reporter.xml",
+        "indent":  4
+    },
   "eslintConfig": {
     "extends": "react-app"
   },
